# minifmm_gpu

./: CMakeLists.txt
include/: bind_out.h  initialise.h  params.h  parse_args.h  rng.h  tree.h  type.h
input/: run_cpp.cpp
src/: dtt.cu  initialise.cpp  kernels.cpp  main.cpp  traversal.cpp  tree.cpp  verify.cpp
